@@ -1,3 +1,7 @@
+2007-08-02  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: Add basic DND support
+
 2007-07-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/entry.py (KiwiEntry.prefill): Handle duplicate entries
